--- a/9yuan9.html
+++ b/9yuan9.html
@@ -19,7 +19,7 @@
     </ul>
   </div>
 </div>
-<iframe src="http://ai.m.taobao.com/bu.html?id=1&pid=mm_16381314_12448080_50332123" style="width:100%;height:500px;"></iframe>
+<iframe src="http://temai.m.taobao.com/cheap.htm?pt=1&pid=mm_16381314_12448080_50332123" style="width:100%;height:500px;"></iframe>
 </script>
 </body>
 </html>
