--- a/9yuan9.html
+++ b/9yuan9.html
@@ -1,6 +1,7 @@
 ﻿<html>
 <html>
 <head>
+<title>91秒</title>
 <meta name="viewport" content="width=device-width" />
 <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css">
 <link rel="stylesheet" href="css/index.css">
